<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RandomDogActivity"
        android:orientation="vertical">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            app:srcCompat="@android:color/black"
            />

    <TextView
            android:text="@string/random_dog_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>
    <TextView
            android:text="@string/random_dog_race"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" android:textSize="18sp"/>
    <Button
            android:text="@string/random_dog_again_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>